--- a/web/views/add.html
+++ b/web/views/add.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="../scripts/script.js"></script>
     </head>
     <body>
-        <div class="outer-block">
+        <div class="outer-block" id="outer-block">
             <div class="auth-block">
                 <img src="images/user.png" width="64px" height="64px">
                 <label>
