--- a/web/views/signup.html
+++ b/web/views/signup.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="../scripts/script.js"></script>
 </head>
 <body>
-    <div class="outer-block">
-        <div class="signup-block">
+    <div class="outer-block" id="outer-block">
+        <div class="signup-block" id="signup-block">
             <img src="images/user.png" width="64px" height="64px">
             <label>
                 <input type="text" placeholder="Login" id="login" class="auth-field"><br \>
